--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,13 @@
 {% load complete_profile %}
 
 
+{% if form.errors %}
+    <div class="alert alert-danger">
+        {{ form.errors }}
+    </div>
+{% endif %}
+
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
