--- a/templates/courses/edit-course.html
+++ b/templates/courses/edit-course.html
@@ -5,7 +5,7 @@
 
     <!-- edit car form -->
     <section id="create-page" class="auth">
-        <form id="create" method="POST" action="{% url 'edit course' pk=object.pk %}">
+        <form id="create" method="POST" action={% url 'edit course' pk %}>
             <div class="container">
 
                 <h1>Edit Course</h1>
