refactoring + admin side

--- a/templates/exceptions/500.html
+++ b/templates/exceptions/500.html
@@ -3,11 +3,11 @@
 
     <!-- profile details section -->
     <section id="car-details">
-        <h2> Ooops: You don't have access to this resource. </h2>
+        <h2> Uh-la-la </h2>
         <div class="info-section">
             <div class="info-section">
 
-                <img class="perm_denied" src="/static/images/permission_denied.gif" alt='profile-image'/>
+                <img class="perm_denied" src="../../static/images/500.jpeg" alt='profile-image'/>
 
                 <div class="buttons">
                     <br><br>
