--- a/templates/partials/course-card.html
+++ b/templates/partials/course-card.html
@@ -9,7 +9,7 @@
                             <!-- car image -->
                             <img src="{{ course.image_url }}"
                                  alt="course image">
-                        </div>d
+                        </div>
                         <!-- car title -->
                         <h3>{{ course.title }}</h3>
                         <!-- car type -->
