--- a/templates/exceptions/403.html
+++ b/templates/exceptions/403.html
@@ -3,11 +3,11 @@
 
     <!-- profile details section -->
     <section id="car-details">
-        <h2> Ooops: Django is rendering. </h2>
+        <h2> Ooops: You don't have access to this resource. </h2>
         <div class="info-section">
             <div class="info-section">
 
-                <img class="perm_denied" src="{% static 'images/403.jpg' %}" alt='profile-image'/>
+                <img class="perm_denied" src="../../static/images/403.jpg" alt='profile-image'/>
 
                 <div class="buttons">
                     <br><br>
