--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/static/style/style.css">
     <title>Django Academy</title>
+
+
 </head>
+
+{% include "partials/messages.html" %}
 
 <body>
 <div id="box">
